# internal/auth/login/dto.go
@@ -1,0 +1,14 @@
+package login
+
+import "github.com/nimyab/nim2book-back/internal/domain"
+
+type Input struct {
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required,min=6"`
+}
+
+type Output struct {
+	User         *domain.User `json:"user"`
+	AccessToken  string       `json:"accessToken"`
+	RefreshToken string       `json:"refreshToken"`
+}
