# internal/controller/http/router.go
@@ -3,15 +3,16 @@ package http
 import (
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
+	"github.com/nimyab/nim2book-back/internal/auth/login"
+	"github.com/nimyab/nim2book-back/internal/auth/logout"
+	"github.com/nimyab/nim2book-back/internal/auth/register"
 	echoSwagger "github.com/swaggo/echo-swagger"
-	"log/slog"
-	"regexp"
-	"time"
 
 	_ "github.com/nimyab/nim2book-back/docs"
 	"github.com/nimyab/nim2book-back/internal/book/get_book"
 	"github.com/nimyab/nim2book-back/internal/book/get_books"
 	"github.com/nimyab/nim2book-back/internal/book/get_chapter"
+	customMiddleware "github.com/nimyab/nim2book-back/internal/middleware"
 	"github.com/nimyab/nim2book-back/internal/translate/translate_book"
 	"github.com/nimyab/nim2book-back/pkg/validator"
 )
@@ -22,38 +23,7 @@ func Router() *echo.Echo {
 	e.Use(middleware.Recover())
 	e.Use(middleware.CORS())
 	e.Use(middleware.RequestID())
-	e.Use(func(next echo.HandlerFunc) echo.HandlerFunc {
-		return func(c echo.Context) error {
-			if regexp.MustCompile(`(?i).*swagger.*`).MatchString(c.Request().URL.Path) {
-				return next(c)
-			}
-
-			slog.Info(
-				"Request received",
-				slog.String("method", c.Request().Method),
-				slog.String("path", c.Request().URL.Path),
-				slog.String("request_id", c.Response().Header().Get(echo.HeaderXRequestID)),
-				slog.String("user_agent", c.Request().UserAgent()),
-				slog.String("host", c.Request().Host),
-			)
-
-			t1 := time.Now()
-			defer func() {
-				slog.Info(
-					"Request completed",
-					slog.String("method", c.Request().Method),
-					slog.String("path", c.Request().URL.Path),
-					slog.String("request_id", c.Response().Header().Get(echo.HeaderXRequestID)),
-					slog.String("user_agent", c.Request().UserAgent()),
-					slog.String("host", c.Request().Host),
-					slog.Int("status", c.Response().Status),
-					slog.String("duration", time.Since(t1).String()),
-				)
-			}()
-
-			return next(c)
-		}
-	})
+	e.Use(customMiddleware.Logger())
 
 	e.Validator = validator.New()
 
@@ -66,6 +36,10 @@ func Router() *echo.Echo {
 		apiV1.GET("/book/get-chapter/:path", get_chapter.HTTPv1)
 		apiV1.GET("/book", get_books.HTTPv1)
 		apiV1.GET("/book/:id", get_book.HTTPv1)
+
+		apiV1.POST("/auth/register", register.HTTPv1)
+		apiV1.POST("/auth/login", login.HTTPv1)
+		apiV1.POST("/auth/logout", logout.HTTPv1)
 	}
 
 	return e
