# internal/user/create/dto.go
@@ -1,0 +1,5 @@
+package create
+
+type Input struct{}
+
+type Output struct{}
