# internal/user/delete/dto.go
@@ -1,0 +1,5 @@
+package delete
+
+type Input struct{}
+
+type Output struct{}
