# internal/user/get/dto.go
@@ -1,0 +1,5 @@
+package get
+
+type Input struct{}
+
+type Output struct{}
