# internal/user/update/dto.go
@@ -1,0 +1,5 @@
+package update
+
+type Input struct{}
+
+type Output struct{}
